# video_recorder

./: CMakeLists.txt  README.md  package.xml
audio_recorder/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
audio_recorder/launch/: audio_recorder_node.launch
audio_recorder/scripts/: audio_recorder_node
audio_recorder/src/audio_recorder/: audio_recorder_node.py
audio_recorder_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
audio_recorder_msgs/action/: StartRecording.action  StopRecording.action
audio_recorder_msgs/msg/: Status.msg
include/video_recorder/: video_recorder_node.hpp
launch/: video_recorder_node.launch
src/: video_recorder_node.cpp
srv/: SaveImage.srv  StopRecording.srv
video_recorder/: CHANGELOG.rst  CMakeLists.txt  package.xml
video_recorder/include/video_recorder/: video_recorder_node.hpp
video_recorder/launch/: video_recorder_node.launch
video_recorder/src/: video_recorder_node.cpp
video_recorder_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
video_recorder_msgs/action/: SaveImage.action  StartRecording.action  StopRecording.action
video_recorder_msgs/msg/: Status.msg
video_recorder_msgs/srv/: SaveImage.srv  StartRecording.srv
