<?xml version="1.0"?>
<package format="2">
  <name>video_recorder</name>
  <version>0.0.4</version>
  <description>Utilities for recording image data to a video file on-disk</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>video_recorder_msgs</depend>

  <export>
  </export>
</package>
