<?xml version="1.0"?>
<package format="2">
  <name>video_recorder_msgs</name>
  <version>0.0.0</version>
  <description>Messages for recording photos and videos from image topics</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>

  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
