<?xml version="1.0"?>
<package format="2">
  <name>video_recorder_msgs</name>
  <version>0.0.0</version>
  <description>Messages for recording photos and videos from image topics</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>genmsg</depend>

  <export>
  </export>
</package>
